<resources>
    <string name="app_name">比信</string>
    <string name="choose_theme">选择主题</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请再次输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="mail">邮箱 </string>
    <string name="login_sms">验证码登录 </string>

    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="agree">接受</string>
    <string name="new_friend">新朋友</string>

    <string name="chat">陌生人聊天</string>
    <string name="add_friend">添加好友</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登录</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>


    <string name="login_success">登录成功</string>
    <string name="Username">用户名/手机号</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记密码？</string>
    <string name="find_your_password">找回密码</string>
    <string name="ok">确定</string>
    <string name="send_sms">发送验证码</string>
    <string name="sms">验证码</string>
    <string name="phone_number">手机号码</string>
    <string name="phone_new_number">新手机号码</string>
    <string name="go">登录</string>
    <string name="repeat_password">重复密码</string>
    <string name="new_password">新密码</string>
    <string name="next">注册</string>
    <string name="go_back_login">返回登录</string>

    <!--图片选择器-->
    <string name="mis_folder_all">所有图片</string>
    <string name="mis_preview">Preview</string>
    <string name="mis_msg_no_camera">No system camera found</string>
    <string name="mis_msg_amount_limit">Select images amount is limit</string>
    <string name="mis_action_done">确定</string>
    <string name="mis_action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="mis_photo_unit">Shot</string>
    <string name="mis_tip_take_photo">Take photo</string>
    <string name="mis_error_image_not_exist">Image error</string>
    <string name="mis_error_no_permission">Has no permission</string>
    <string name="mis_permission_dialog_title">Permission Deny</string>
    <string name="mis_permission_dialog_ok">OK</string>
    <string name="mis_permission_dialog_cancel">CANCEL</string>
    <string name="mis_permission_rationale">Storage read permission is needed to pick files.</string>
    <string name="mis_permission_rationale_write_storage">Storage write permission is needed to save the image.</string>


    <string name="select_images">选择图片</string>
    <string name="gif_make">GIF制作</string>

    <!--image-selector-->
    <string name="folder_all">所有图片</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">Select images amount is limit</string>
    <string name="action_done">Done</string>
    <string name="photo_unit">Shot</string>
    <string name="tip_take_photo">Take photo</string>
    <string name="setting">设置</string>
</resources>
