<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_bg"
    tools:context="com.ego.im4bmob.ui.RegActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/cv_add"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#2ea67f"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/fab"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/go_back_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/reg_ll_send_sms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="@string/phone_number"
                            android:inputType="textPersonName"
                            android:paddingBottom="2dp"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:textSize="13sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_sms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="@string/sms"
                            android:inputType="textPersonName"
                            android:paddingBottom="2dp"
                            android:textColor="#f0f7f4"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:textSize="13sp" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/reg_send_smsCode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/send_sms" />
                </LinearLayout>

                <Button
                    android:id="@+id/reg_bt_go"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bt_shape_2"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/ok"
                    android:textColor="#2fa881"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/reg_ll_ok"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:paddingEnd="30dp"
                android:paddingStart="50dp"
                android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#f0f7f4"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit_2"
                        android:hint="@string/Username"
                        android:inputType="textPersonName"
                        android:paddingBottom="2dp"
                        android:textColor="#f0f7f4"
                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                        android:textSize="13sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#f0f7f4"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit_2"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"
                        android:textColor="#f0f7f4"
                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                        android:textSize="13sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#f0f7f4"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/et_repeatpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit_2"
                        android:hint="@string/repeat_password"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"
                        android:textColor="#f0f7f4"
                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                        android:textSize="13sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <Button
                android:id="@+id/bt_go"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bt_shape_2"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/next"
                android:textColor="#2fa881"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <!--关闭按钮-->
    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:id="@+id/fab"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_horizontal|top"-->
    <!--android:src="@drawable/plus_x"-->
    <!--android:transitionName="loginFab"-->
    <!--app:fabSize="normal"/>-->
    <!--</FrameLayout>-->


</RelativeLayout>
